add ul, ol, image links

--- a/web_basics/index.html
+++ b/web_basics/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>Beau LeBeau</title>
 </head>
 <body>
-<h1>Hello!</h1>
+    <h1>Meet Beau LeBeau</h1>
+    <p>My dog, <strong>Beau</strong>, is a pretty special lil' fella!</p>
+    <ul>
+        <li>Beau will be 11 years old in April</li>
+        <li>Beau is a Doxie-chon, or a Dachshund-Bichon mix</li>
+        <li>Like all Dachshunds, Beau is bred for digging, and loves nothing more than digging into the filthiest thing in sight- <em>Beau loves trash</em></li>
+    </ul>
+    <h3>My favorite pictures of Beau</h3>
+    <ol>
+        <li> <a href="https://scontent.ford1-1.fna.fbcdn.net/v/t1.0-9/13325670_1138083506211915_2647597712764555063_n.jpg?oh=e7ca79f712118f330bb8dac277853272&oe=59025639"> Beau helping my sister pack for China</a></li>
+        <li> <a href="https://scontent.ford1-1.fna.fbcdn.net/v/t1.0-9/14610969_1250066438346954_3102970069531386574_n.jpg?oh=bb855d3d3ac0f1436121827a80479d53&oe=59442622"> Beau contemplating space travel</a></li>
+
+    </ol>
 </body>
 </html>
