add colspan & rowspan

--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -30,6 +30,14 @@
         <td>Mom</td>
         <td>56</td>
     </tr>
+    <tr>
+       <td colspan="3">Fun Facts</td>
+    </tr>
+    <tr>
+        <td rowspan="2">Located in Grayslake, IL</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+    </tr>
 </table>
 </body>
 </html>
