--- a/html/moon_bootz/index.html
+++ b/html/moon_bootz/index.html
@@ -5,5 +5,10 @@
 </head>
 <body>
 <h1>Index</h1>
+<nav>
+    <a href="contact.html">Contact</a>
+    <a href="product_details.html">Product Details</a>
+    <a href="legal/waiver.html">Waiver</a>
+</nav>
 </body>
 </html>
