--- a/css/positioning/octo-index.html
+++ b/css/positioning/octo-index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <title>Ollie the Octopus Gets Dressed</title>
-    <link rel="stylesheet" type="text/css" href="positioning/octo-style.css">
+    <link rel="stylesheet" type="text/css" href="octo-style.css">
 </head>
 <body>
-<img src="glasses.png" alt="glasses">
-<img src="hat.png" alt="hat">
-<img src="octopus.png" alt="Ollie">
+<img src="glasses.png" alt="glasses" id="glasses">
+<img src="hat.png" alt="hat" id="hat">
+<img src="octopus.png" alt="Ollie" id="ollie">
 
 
 </body>
