add event listeners

--- a/web_dev/client_side_js/index.html
+++ b/web_dev/client_side_js/index.html
@@ -4,7 +4,7 @@
     <title>JS DOM Practice</title>
 </head>
 <body>
-    <h1>
+    <h1 id="header">
       <p>This is our practice page for JavaScript DOM Manipulation</p>
     </h1>
     <div id="first-line">This is our first line</div>
